--- a/6. Ajax Type Ahead with fetch/index.html
+++ b/6. Ajax Type Ahead with fetch/index.html
@@ -10,8 +10,7 @@
   <form class="search-form">
     <input type="text" class="search" placeholder="City or State">
     <ul class="suggestions">
-      <li>Filter for a city</li>
-      <li>or a state</li>
+      <li>Filter for a city or a state</li>
     </ul>
   </form>
 <script src="index.js"></script>
