--- a/7. Array Cardio Day 2/index.html
+++ b/7. Array Cardio Day 2/index.html
@@ -51,6 +51,7 @@
     // Find the comment with this ID
     // delete the comment with the ID of 823423
     const index = comments.findIndex(comment=>comment.id===823423)
+    //若要找多個用forEach或一般的for loop解
     comments.splice(index,1)
     // or
     const newComments = [
