--- a/8. Fun with HTML5 Canvas/index.html
+++ b/8. Fun with HTML5 Canvas/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
+<script type="text/javascript" src="index.js"></script>
 
 <style>
   html, body {
