--- a/8. Fun with HTML5 Canvas/index.html
+++ b/8. Fun with HTML5 Canvas/index.html
@@ -5,7 +5,12 @@
   <title>HTML5 Canvas</title>
 </head>
 <body>
-<canvas id="draw" width="800" height="800"></canvas>
+<div style="display: flex;align-content:center; align-items: center;justify-content:center;flex-direction: column;">
+  <p style="flex:1;">Start painting</p>
+<div>
+<canvas id="draw" width="800" height="800">
+  
+</canvas>
 <script type="text/javascript" src="index.js"></script>
 
 <style>
