--- a/10. Hold Shift and Check Checkboxes/index.html
+++ b/10. Hold Shift and Check Checkboxes/index.html
@@ -96,6 +96,29 @@
   </div>
 
 <script>
+  let lastChecked;
+  function handlecheck(e){
+    //check if they had the shift key down
+    // AND check that they are checking it
+    let inBetween = false;
+    if(e.shiftKey && this.checked){
+      //go ahead and do what we please
+      
+      checkboxes.forEach(checkbox => {
+        if (checkbox === this || checkbox === lastChecked){
+          inBetween = !inBetween;
+        }
+        if(inBetween){
+          checkbox.checked = true;
+        }
+      })
+    }
+  lastChecked = this
+  }
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]')
+  checkboxes.forEach(checkbox => {
+    checkbox.addEventListener('click',handlecheck)
+  })
 </script>
 </body>
 </html>
